# generate-paper

./: .gitignore  README.md  _config.yml  cookiecutter.json  requirements.txt
.github/workflows/: build_pages.yml  test_package.yml
hooks/: post_gen_project.py
tests/: test_package_generation.py
{{cookiecutter.repository_name}}/: .cspell_dict.txt  .gitignore  LICENSE  README.md  _config.yml  _toc.yml  cspell.config.yaml  environment.yml  pyproject.toml
{{cookiecutter.repository_name}}/.github/workflows/: build_docs.yml
{{cookiecutter.repository_name}}/code/: README.md
{{cookiecutter.repository_name}}/data/: README.md
{{cookiecutter.repository_name}}/docs/: about.md  references.bib
